# ICT_BOT_V2

./: .env.example  .gitignore  ACADEMIC_SUMMARY.md  ANTI_HALLUCINATION_FIX.md  BACKWARD_COMPATIBILITY_SUMMARY.md  CLUSTERING_TEST_RESULTS.md  CODE_REVIEW_SUMMARY.md  CONFIDENCE_THRESHOLD_FIX.md  DEPLOYMENT.md  DOCKER_GUIDE.md  DOCKER_SUCCESS.md  EVALUATION_REPORT.md  FILES_TO_REVIEW.md  FINAL_REVIEW.txt  FINAL_STATUS.md  FIXES_APPLIED.md  GUIDE_UTILISATEUR.md  INGESTION_SUCCESS.md  INSTALLATION.md  MATH_FORMULAS_GUIDE.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  PYTHON_314_ISSUE.md  QUICKSTART.md  README.md  RESPONSE_QUALITY_IMPROVEMENTS.md  REVIEW_FIXES.md  STARTUP_STATUS.md  START_APP.md  SUCCESS.md  makefile  pyproject.toml  requirements.txt  test_backward_compatibility.py  test_enhanced_ingestion.py
app/: __init__.py  chat.py  streamlit_app.py
docker/: .dockerignore  Dockerfile  Dockerfile.ingestion  README.md  docker-compose.dev.yml  docker-compose.ingestion.yml  docker-compose.prod.yml  docker-compose.yml  docker-health-check.sh  docker-run.sh  entrypoint-ingestion.sh  entrypoint.sh  nginx.conf
scripts/: benchmark.py  ingest_documents.py  setup_database.py
src/: __init__.py
tests/: DOCKER_ENHANCED_FEATURES_TEST_SUMMARY.md  WARNINGS_FIXED_SUMMARY.md  evaluate_rag.py  evaluation_results_qwen2.5_3b.json  test_dataset.json  test_docker_data_persistence.py  test_docker_dependencies.py  test_docker_enhanced_features.py  test_docker_entry_point.py  test_docker_environment_configuration.py  test_docker_health_check.py  test_docker_integration.py  test_llm.py  (+4 more)
(+120 files in other folders)
